// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPIntegrationEvent component should render a loader because the component has an empty event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
/>
`;

exports[`HTTPIntegrationEvent component should render a loader because the component has no event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
/>
`;

exports[`HTTPIntegrationEvent component should render a loader while the component is fetching an event 1`] = `
<Loader
  inline={false}
  minHeight="500px"
/>
`;

exports[`HTTPIntegrationEvent component should render the data of HTTP request (Empty bodies) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://api.gorgias.io"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <DatetimeLabel
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={null}
        >
          <HTTPIntegrationEventParams
            params={null}
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={null}
        />
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`HTTPIntegrationEvent component should render the data of HTTP request (JSON bodies) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://api.gorgias.io"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <DatetimeLabel
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={
            Immutable.Map {
              "paramKey1": "paramValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "paramKey1": "paramValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
        >
          <InputField
            readOnly={true}
            rows={3}
            type="textarea"
            value="{
    \\"bodyKey1\\": \\"bodyValue1\\"
}"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`HTTPIntegrationEvent component should render the data of a HTTP request (html response) 1`] = `
<Container
  className="page-container"
  fluid={true}
  tag="div"
>
  <Row
    tag="div"
  >
    <Col
      className="request mb-4"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Request
        </h2>
        <HTTPIntegrationEventItem
          name="Method"
          value="GET"
        />
        <HTTPIntegrationEventItem
          name="URL"
          value="https://api.gorgias.io"
        />
        <HTTPIntegrationEventItem
          name="Sent"
        >
          <DatetimeLabel
            dateTime="nowTimestamp"
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
          value={
            Immutable.Map {
              "headersKey1": "headersValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Params"
          value={
            Immutable.Map {
              "paramKey1": "paramValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "paramKey1": "paramValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value={
            Immutable.Map {
              "bodyKey1": "bodyValue1",
            }
          }
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "bodyKey1": "bodyValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
    <Col
      className="response"
      lg="6"
      md="12"
      tag="div"
      widths={
        Array [
          "xs",
          "sm",
          "md",
          "lg",
          "xl",
        ]
      }
    >
      <Container
        fluid={true}
        tag="div"
      >
        <h2
          className="mb-4"
        >
          Response
        </h2>
        <HTTPIntegrationEventItem
          name="Status code"
        >
          <HTTPStatusLabel />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Headers"
        >
          <HTTPIntegrationEventParams
            params={
              Immutable.Map {
                "headersKey1": "headersValue1",
              }
            }
          />
        </HTTPIntegrationEventItem>
        <HTTPIntegrationEventItem
          name="Body"
          value="<html><body>Hello world!</body></html>"
        >
          <InputField
            readOnly={true}
            rows={1}
            type="textarea"
            value="<html><body>Hello world!</body></html>"
          />
        </HTTPIntegrationEventItem>
      </Container>
    </Col>
  </Row>
</Container>
`;

exports[`HTTPIntegrationEvent container should render a HTTPIntegrationEvent component with props from the Redux store 1`] = `
<HTTPIntegrationEvent
  event={
    Immutable.Map {
      "created_datetime": "nowTimestamp",
      "request": Immutable.Map {
        "method": "GET",
        "url": "https://api.gorgias.io",
        "status": 200,
        "headers": Immutable.Map {
          "headersKey1": "headersValue1",
        },
        "params": Immutable.Map {
          "paramKey1": "paramValue1",
        },
        "body": Immutable.Map {
          "bodyKey1": "bodyValue1",
        },
      },
      "response": Immutable.Map {
        "headers": Immutable.Map {
          "headersKey1": "headersValue1",
        },
        "body": "<html><body>Hello world!</body></html>",
      },
    }
  }
  eventId="2"
  fetchHTTPIntegrationEvent={[Function]}
  integrationId="1"
/>
`;
